  version 2.6.5
- fixed hiding display at mailbox for non-default mailboxes
- hiding rules now apply to all displays
- fixed false amount display when the game fires events in a faulty order
- minor code improvements

  version 2.6.4
- added option for ignoring Honor
- added option to hide items at mailboxes
- fast autoloot ignores locked items
- re-ordered options in option panel
- minor code improvements

  version 2.6.3
- added fix for unlisted currencies

  version 2.6.2
- fixed bug with currencies that are not in the currency book

  version 2.6.1
- made currency display more responsive
- some code improvements

  version 2.6
- added option to enter own farming item ids

  version 2.5.2
- added support for island expeditions

  version 2.5.1
- fixed compatibility with WoW version 8.1

  version 2.5
- added option to set icon scale

  version 2.4.1
- option "show names of all items" now also applies to currencies

  version 2.4

- increased icon size relative to text size
- small performance improvements
- fixed bag item count only working when also having total count active