@@ -1,5 +1,5 @@
-local addonName, farmerVars = ...
+local addonName, addon = ...
 
 if (GetLocale() ~= 'deDe') then return end
 
-local L = farmerVars.L;
+local L = addon.L;
