@@ -2,7 +2,8 @@
 - fixed hiding display at mailbox for non-default mailboxes
 - hiding rules now apply to all displays
 - fixed false amount display when the game fires events in a faulty order
-- minor code improvements
+- added basic localization support
+- improved code to be more easily maintainable and expandable
 
   version 2.6.4
 - added option for ignoring Honor
